Refactor plugin structure: add base classes for activation, deactivation, internationalization, and loader; update namespaces; remove unused files.

--- a/plugin-name/composer.json
+++ b/plugin-name/composer.json
@@ -1,10 +1,12 @@
 {
-  "name": "yourname/plugin-name",
+  "name": "yourname/pluginname",
   "description": "Wordpress plugin starter template",
   "type": "project",
   "autoload": {
     "psr-4": {
-      "Peanuts\\PluginName\\": "includes/"
+      "PluginName\\": "includes/",
+      "PluginName\\admin\\": "admin/",
+      "PluginName\\public\\": "public/"
     }
   },
   "authors": [
