--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "gulp": "^5.0.1"
+    "gulp": "^5.0.1",
+    "gulp-rename": "^2.1.0",
+    "gulp-terser": "^2.1.0"
   }
 }
